--- a/PokedexApp/Resources/Base.lproj/Main.storyboard
+++ b/PokedexApp/Resources/Base.lproj/Main.storyboard
@@ -5,51 +5,103 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Pokemon Details View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PokedexApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PokemonDetailsViewController" customModule="PokedexApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1Y-bb-EDx">
-                                <rect key="frame" x="32" y="42" width="364" height="842"/>
+                                <rect key="frame" x="32" y="52" width="364" height="620.33333333333337"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pikachu" translatesAutoresizingMaskIntoConstraints="NO" id="V7D-jW-7G5">
-                                        <rect key="frame" x="8" y="16" width="348" height="280.66666666666669"/>
+                                        <rect key="frame" x="8" y="16" width="348" height="206.66666666666666"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electric" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVa-e5-awh" userLabel="Subtitle Label">
-                                        <rect key="frame" x="153.66666666666666" y="341.66666666666669" width="57" height="21"/>
+                                        <rect key="frame" x="153.66666666666666" y="267.66666666666669" width="57" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pikachu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JA6-Zi-oMp" userLabel="Title Label">
-                                        <rect key="frame" x="152" y="312.66666666666669" width="60" height="21"/>
+                                        <rect key="frame" x="152" y="238.66666666666669" width="60" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eCs-qc-7Bn">
+                                        <rect key="frame" x="-0.33333333333334281" y="304.66666666666669" width="365" height="60"/>
+                                        <color key="backgroundColor" red="0.60784316059999999" green="0.109803915" blue="0.1215686351" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="Xol-sr-KHv"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6nZ-cY-eNd">
+                                            <size key="itemSize" width="62" height="54"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokemonCell" id="bbv-HU-65A" customClass="PokemonStatsCollectionViewCell" customModule="PokedexApp" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="3" width="62" height="54"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="p58-xO-Nt0">
+                                                    <rect key="frame" x="0.0" y="0.0" width="62" height="54"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0qX-i2-TNf">
+                                                            <rect key="frame" x="8" y="8" width="46" height="38"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                    <color key="tintColor" systemColor="linkColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="0qX-i2-TNf" firstAttribute="centerY" secondItem="p58-xO-Nt0" secondAttribute="centerY" id="GpA-eX-IUl"/>
+                                                        <constraint firstItem="0qX-i2-TNf" firstAttribute="top" secondItem="p58-xO-Nt0" secondAttribute="top" constant="8" id="JeO-iP-NMg"/>
+                                                        <constraint firstItem="0qX-i2-TNf" firstAttribute="centerX" secondItem="p58-xO-Nt0" secondAttribute="centerX" id="k3Z-6E-WLm"/>
+                                                        <constraint firstItem="0qX-i2-TNf" firstAttribute="leading" secondItem="p58-xO-Nt0" secondAttribute="leading" constant="8" id="l58-Iy-HSC"/>
+                                                    </constraints>
+                                                </collectionViewCellContentView>
+                                                <color key="tintColor" systemColor="systemOrangeColor"/>
+                                                <size key="customSize" width="62" height="54"/>
+                                                <connections>
+                                                    <outlet property="statsLabel" destination="0qX-i2-TNf" id="mbC-Sv-aOE"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="yHs-OQ-iYW"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="c3S-r5-7wY"/>
+                                        </connections>
+                                    </collectionView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray5Color"/>
                                 <constraints>
                                     <constraint firstItem="V7D-jW-7G5" firstAttribute="leading" secondItem="B1Y-bb-EDx" secondAttribute="leading" constant="8" id="5fN-2p-Lyy"/>
                                     <constraint firstItem="JA6-Zi-oMp" firstAttribute="centerX" secondItem="V7D-jW-7G5" secondAttribute="centerX" id="8Ts-JB-rg9"/>
+                                    <constraint firstItem="eCs-qc-7Bn" firstAttribute="top" secondItem="DVa-e5-awh" secondAttribute="bottom" constant="16" id="O8q-Hh-YU4"/>
                                     <constraint firstItem="V7D-jW-7G5" firstAttribute="centerX" secondItem="B1Y-bb-EDx" secondAttribute="centerX" id="TDU-fM-XCH"/>
                                     <constraint firstItem="JA6-Zi-oMp" firstAttribute="top" secondItem="V7D-jW-7G5" secondAttribute="bottom" constant="16" id="XSn-6U-wZi"/>
                                     <constraint firstItem="V7D-jW-7G5" firstAttribute="height" secondItem="B1Y-bb-EDx" secondAttribute="height" multiplier="1/3" id="YPX-K2-Lrv"/>
+                                    <constraint firstItem="eCs-qc-7Bn" firstAttribute="width" secondItem="B1Y-bb-EDx" secondAttribute="width" constant="1" id="hQe-tl-dqY"/>
                                     <constraint firstItem="V7D-jW-7G5" firstAttribute="top" secondItem="B1Y-bb-EDx" secondAttribute="top" constant="16" id="p99-lv-zp8"/>
+                                    <constraint firstItem="eCs-qc-7Bn" firstAttribute="centerX" secondItem="DVa-e5-awh" secondAttribute="centerX" id="v5E-TX-2Dr"/>
                                     <constraint firstItem="DVa-e5-awh" firstAttribute="top" secondItem="JA6-Zi-oMp" secondAttribute="bottom" constant="8" id="y0y-lr-hRH"/>
                                     <constraint firstAttribute="trailing" secondItem="V7D-jW-7G5" secondAttribute="trailing" constant="8" id="yid-rD-5Qp"/>
                                     <constraint firstItem="DVa-e5-awh" firstAttribute="centerX" secondItem="JA6-Zi-oMp" secondAttribute="centerX" id="zca-xd-blK"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMY-lv-WKM">
-                                <rect key="frame" x="151.66666666666666" y="854" width="124.99999999999997" height="30"/>
+                                <rect key="frame" x="151.66666666666666" y="688.33333333333337" width="124.99999999999997" height="30"/>
                                 <state key="normal" title="Random Pokemon"/>
                                 <connections>
                                     <action selector="randomizeButtonTapepd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g2o-qw-hPF"/>
@@ -59,36 +111,45 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="B1Y-bb-EDx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1lg-K0-snk"/>
-                            <constraint firstItem="vMY-lv-WKM" firstAttribute="centerX" secondItem="B1Y-bb-EDx" secondAttribute="centerX" id="CGk-ht-t8L"/>
+                            <constraint firstItem="B1Y-bb-EDx" firstAttribute="centerY" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1lg-K0-snk"/>
+                            <constraint firstItem="vMY-lv-WKM" firstAttribute="top" secondItem="B1Y-bb-EDx" secondAttribute="bottom" priority="999" constant="16" id="FXg-Sh-aZZ"/>
                             <constraint firstItem="B1Y-bb-EDx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GOr-FQ-zJn"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="B1Y-bb-EDx" secondAttribute="bottom" priority="750" constant="128" id="Ifr-zD-Fjx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vMY-lv-WKM" secondAttribute="bottom" constant="8" id="NGr-d8-s1B"/>
-                            <constraint firstItem="B1Y-bb-EDx" firstAttribute="top" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="128" id="R7c-c3-FUz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B1Y-bb-EDx" secondAttribute="bottom" constant="8" id="enQ-PO-h7a"/>
+                            <constraint firstItem="B1Y-bb-EDx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="R7c-c3-FUz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B1Y-bb-EDx" secondAttribute="bottom" multiplier="1.3" constant="18" id="gWU-sx-e95"/>
                             <constraint firstItem="B1Y-bb-EDx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="i43-p8-f0W"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B1Y-bb-EDx" secondAttribute="trailing" constant="32" id="vPv-QN-kBo"/>
+                            <constraint firstItem="vMY-lv-WKM" firstAttribute="top" secondItem="B1Y-bb-EDx" secondAttribute="bottom" priority="998" constant="24" id="ylX-ao-lBC"/>
+                            <constraint firstItem="vMY-lv-WKM" firstAttribute="centerX" secondItem="B1Y-bb-EDx" secondAttribute="centerX" id="yoU-4j-PdY"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="eCs-qc-7Bn" id="mgQ-dE-2th"/>
+                        <outlet property="loadingConstraint" destination="ylX-ao-lBC" id="CpV-HJ-DX8"/>
                         <outlet property="pokemonImage" destination="V7D-jW-7G5" id="Ulf-xd-vRn"/>
                         <outlet property="randomizeButtom" destination="vMY-lv-WKM" id="9jt-cl-ele"/>
                         <outlet property="subtitleLabel" destination="DVa-e5-awh" id="b1f-z4-j2Z"/>
                         <outlet property="titleLabel" destination="JA6-Zi-oMp" id="ZUQ-49-16p"/>
+                        <outlet property="workingConstraint" destination="FXg-Sh-aZZ" id="HPc-2A-jcZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8" y="34"/>
+            <point key="canvasLocation" x="-8.4112149532710276" y="33.693304535637154"/>
         </scene>
     </scenes>
     <resources>
         <image name="pikachu" width="475" height="475"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
