--- a/PokedexApp/Resources/Base.lproj/Main.storyboard
+++ b/PokedexApp/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5Mi-jj-iL3">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -9,34 +9,52 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Pokemon Details View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="zrN-0O-syP">
+            <objects>
+                <tabBarController id="5Mi-jj-iL3" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EWX-6a-mGq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Q7k-Zc-CFl"/>
+                        <segue destination="c7E-ty-r8j" kind="relationship" relationship="viewControllers" id="EXW-mL-2Aa"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0z5-oc-bxQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-545" y="113"/>
+        </scene>
+        <!--Pokemon-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PokemonDetailsViewController" customModule="PokedexApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1Y-bb-EDx">
-                                <rect key="frame" x="32" y="52" width="364" height="620.33333333333337"/>
+                                <rect key="frame" x="32" y="8" width="364" height="622.66666666666663"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pikachu" translatesAutoresizingMaskIntoConstraints="NO" id="V7D-jW-7G5">
-                                        <rect key="frame" x="8" y="16" width="348" height="206.66666666666666"/>
+                                        <rect key="frame" x="8" y="16" width="348" height="207.66666666666666"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electric" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVa-e5-awh" userLabel="Subtitle Label">
-                                        <rect key="frame" x="153.66666666666666" y="267.66666666666669" width="57" height="21"/>
+                                        <rect key="frame" x="153.66666666666666" y="268.66666666666669" width="57" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pikachu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JA6-Zi-oMp" userLabel="Title Label">
-                                        <rect key="frame" x="152" y="238.66666666666669" width="60" height="21"/>
+                                        <rect key="frame" x="152" y="239.66666666666666" width="60" height="20.999999999999972"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eCs-qc-7Bn">
-                                        <rect key="frame" x="-0.33333333333334281" y="304.66666666666669" width="365" height="60"/>
+                                        <rect key="frame" x="-0.33333333333334281" y="305.66666666666669" width="365" height="60"/>
                                         <color key="backgroundColor" red="0.60784316059999999" green="0.109803915" blue="0.1215686351" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="Xol-sr-KHv"/>
@@ -101,7 +119,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMY-lv-WKM">
-                                <rect key="frame" x="151.66666666666666" y="688.33333333333337" width="124.99999999999997" height="30"/>
+                                <rect key="frame" x="151.66666666666666" y="646.66666666666663" width="124.99999999999997" height="30"/>
                                 <state key="normal" title="Random Pokemon"/>
                                 <connections>
                                     <action selector="randomizeButtonTapepd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g2o-qw-hPF"/>
@@ -122,6 +140,8 @@
                             <constraint firstItem="vMY-lv-WKM" firstAttribute="centerX" secondItem="B1Y-bb-EDx" secondAttribute="centerX" id="yoU-4j-PdY"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Pokemon" image="wallet.pass" catalog="system" id="bVw-s1-Fdf"/>
+                    <navigationItem key="navigationItem" id="7lO-vo-FYD"/>
                     <connections>
                         <outlet property="collectionView" destination="eCs-qc-7Bn" id="mgQ-dE-2th"/>
                         <outlet property="loadingConstraint" destination="ylX-ao-lBC" id="CpV-HJ-DX8"/>
@@ -134,13 +154,119 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8.4112149532710276" y="33.693304535637154"/>
+            <point key="canvasLocation" x="412" y="-355"/>
+        </scene>
+        <!--List-->
+        <scene sceneID="84b-vN-Si6">
+            <objects>
+                <viewController id="c7E-ty-r8j" customClass="PokemonSelectionViewController" customModule="PokedexApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0W5-OR-7cW">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-Kb-AdT">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="843"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PokemonCell" textLabel="8ac-cc-m1T" imageView="NFt-U1-ihy" style="IBUITableViewCellStyleDefault" id="0av-2O-Kvs">
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="428" height="54.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0av-2O-Kvs" id="pN4-KN-gsk">
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="54.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Pikachu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8ac-cc-m1T">
+                                                    <rect key="frame" x="89.666666666666686" y="0.0" width="318.33333333333331" height="54.666667938232422"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="pikachu" adjustsImageSizeForAccessibilityContentSizeCategory="YES" id="NFt-U1-ihy">
+                                                    <rect key="frame" x="20" y="0.0" width="54.666666666666686" height="54.666666666666664"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="BYZ-38-t0r" kind="show" identifier="SelectedToDetails" id="swQ-vl-ZcK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="c7E-ty-r8j" id="w3v-XF-9aT"/>
+                                    <outlet property="delegate" destination="c7E-ty-r8j" id="Ida-Is-PBF"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4zJ-M5-Pib">
+                                <rect key="frame" x="8" y="771" width="412" height="64"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yTW-Jf-GWh">
+                                        <rect key="frame" x="8" y="15" width="368" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="search:" destination="c7E-ty-r8j" eventType="editingDidEndOnExit" id="hay-qo-ic7"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OXi-tk-aEV">
+                                        <rect key="frame" x="384" y="20" width="20" height="22"/>
+                                        <state key="normal" image="magnifyingglass" catalog="system"/>
+                                        <connections>
+                                            <action selector="search:" destination="c7E-ty-r8j" eventType="touchUpInside" id="snX-wh-06T"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                <constraints>
+                                    <constraint firstItem="OXi-tk-aEV" firstAttribute="leading" secondItem="yTW-Jf-GWh" secondAttribute="trailing" constant="8" id="0b8-xc-2ZI"/>
+                                    <constraint firstItem="yTW-Jf-GWh" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4zJ-M5-Pib" secondAttribute="top" constant="8" id="AaI-6g-nqx"/>
+                                    <constraint firstItem="yTW-Jf-GWh" firstAttribute="leading" secondItem="4zJ-M5-Pib" secondAttribute="leading" constant="8" id="GPs-xY-gg9"/>
+                                    <constraint firstItem="OXi-tk-aEV" firstAttribute="firstBaseline" secondItem="yTW-Jf-GWh" secondAttribute="firstBaseline" id="Jqq-F6-jvD"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="yTW-Jf-GWh" secondAttribute="bottom" constant="8" id="Qzm-Rg-q1e"/>
+                                    <constraint firstAttribute="trailing" secondItem="OXi-tk-aEV" secondAttribute="trailing" constant="8" id="bw0-kV-bQL"/>
+                                    <constraint firstAttribute="height" constant="64" id="niH-Vp-S0O"/>
+                                    <constraint firstItem="yTW-Jf-GWh" firstAttribute="centerY" secondItem="4zJ-M5-Pib" secondAttribute="centerY" id="tNI-At-8Ug"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="rOb-jp-fSP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Noq-Kb-AdT" firstAttribute="bottom" secondItem="4zJ-M5-Pib" secondAttribute="bottom" constant="8" id="7dR-G3-Ytr"/>
+                            <constraint firstItem="4zJ-M5-Pib" firstAttribute="centerX" secondItem="0W5-OR-7cW" secondAttribute="centerX" id="7x4-Zm-MNN"/>
+                            <constraint firstItem="rOb-jp-fSP" firstAttribute="trailing" secondItem="Noq-Kb-AdT" secondAttribute="trailing" id="ADz-Gs-kxo"/>
+                            <constraint firstItem="Noq-Kb-AdT" firstAttribute="leading" secondItem="rOb-jp-fSP" secondAttribute="leading" id="DDX-du-NkS"/>
+                            <constraint firstItem="4zJ-M5-Pib" firstAttribute="leading" secondItem="rOb-jp-fSP" secondAttribute="leading" constant="8" id="lha-kT-cLl"/>
+                            <constraint firstItem="Noq-Kb-AdT" firstAttribute="top" secondItem="0W5-OR-7cW" secondAttribute="top" id="lxl-6p-S8I"/>
+                            <constraint firstItem="rOb-jp-fSP" firstAttribute="bottom" secondItem="Noq-Kb-AdT" secondAttribute="bottom" id="z87-Fi-roF"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="List" image="list.bullet" catalog="system" id="u67-uF-RLE"/>
+                    <connections>
+                        <outlet property="bottomConstraint" destination="z87-Fi-roF" id="cgs-N2-JW5"/>
+                        <outlet property="searchField" destination="yTW-Jf-GWh" id="2Ip-5Y-Qga"/>
+                        <outlet property="tableView" destination="Noq-Kb-AdT" id="Toc-p7-seT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VM9-TC-6uU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="411" y="509"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="swQ-vl-ZcK"/>
+    </inferredMetricsTieBreakers>
     <resources>
+        <image name="list.bullet" catalog="system" width="128" height="88"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="pikachu" width="475" height="475"/>
+        <image name="wallet.pass" catalog="system" width="115" height="128"/>
         <systemColor name="linkColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
